// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css_macro pick css 1`] = `
""use strict";

const ButtonStyle = "styled-8893f079";
const ButtonStyle2 = "styled-ca5755e8";
const obj = {
  y: ""
};
obj.x = "";
function Hi() {
  const ButtonStyle = "styled-b934b0d3";
}"
`;

exports[`css_macro pick css 2`] = `
".styled-8893f079 {
                color: #000;
            }
.styled-ca5755e8 {
                color: #000;
            }
.styled-b934b0d3 {
                    color: #000;
                }
"
`;

exports[`css_macro pick css 3`] = `
{
  "css_macro.test.ts": ".styled-8893f079 {
                color: #000;
            }
.styled-ca5755e8 {
                color: #000;
            }
.styled-b934b0d3 {
                    color: #000;
                }
",
}
`;
